builder layout and product management start

--- a/src/components/MenuForm.module.css
+++ b/src/components/MenuForm.module.css
@@ -1,7 +1,7 @@
 .menu-form {
-    margin: 20px auto;
+    /* margin: 20px auto; */
     width: 100%;
-    max-width: 400px;
+    /* max-width: 400px; */
     border-radius: 8px;
     background-color: var(--primary-color) !important;
     color: #fff !important;
@@ -9,13 +9,21 @@
     transition: all .2s ease-out;
 }
 
-.menu-form.showForm form {
-    display: block;
+.menu-form form {
+    max-height: 0;
+    overflow: hidden;
+    transition: all .2s ease-out;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
-.menu-form form {
-    width: 100%;
+.menu-form form::-webkit-scrollbar {
     display: none;
+}
+.menu-form:hover form,
+.menu-form:focus-within form {
+    max-height: 500px;
+    overflow: auto;
 }
 
 .menu-form .btn {
