--- a/src/pages/menuBuilder/MenuSections.module.css
+++ b/src/pages/menuBuilder/MenuSections.module.css
@@ -12,6 +12,13 @@
     padding: 4px;
 }
 
+.dropHover {
+    opacity: 0.5;
+    background-color: var(--highlight-color);
+    border-top: solid var(--primary-color) 20px;
+    transition: all .2s linear;
+}
+
 .section .header {
     display: flex;
     justify-content: space-between;
